--- a/style.css
+++ b/style.css
@@ -107,6 +107,17 @@ ul{
     
 }
 
+img{
+    width: 20px;
+    height: 20px;
+    background-color:#b2b3da ;
+}
+
+button{
+    width: 20px;
+    height: 20px;
+    border: none;
+}
 
 
 #concluidas ul{
